--- a/.streamlit/secrets.toml
+++ b/.streamlit/secrets.toml
@@ -1,4 +1,4 @@
-spreadsheet_url = "https://docs.google.com/spreadsheets/d/1_74Vt8KL0bscmSME5Evm6hn4DWytLdGDGb98tHyNwtc/edit?usp=sharing"
+spreadsheet_url = "https://docs.google.com/spreadsheets/d/1_74Vt8KL0bscmSME5Evm6hn4DWytLdGDGb98tHyNwtc/edit?usp=drive_link"
 
 [gcp_service_account]
 type = "service_account"
